# zendesk-code-challenge-2020-03-25

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile  entrypoint.sh
specs/: helper.py
specs/integration/database/: database_search_integration_test.py  database_search_many_integration_test.py  zearch_integration_test.py
specs/unit/database/: basic_index_test.py  database_test.py  exceptions_test.py  indexed_table_test.py
specs/unit/interface/: quit_command_test.py  search_command_test.py  search_paterrn_tokeniser_test.py  zearch_gui_interface_test.py  zearch_main_menu_test.py
specs/unit/zearch/: config_test.py  exceptions_test.py  zearch_test.py
zearch/: __init__.py  database.py  exceptions.py  interface.py
