[tool.poetry]
name = "zearch"
version = "0.1.0"
description = "Zendesk Search Code Challenge"
authors = ["Chris Rode"]
include = ["bin"]

[tool.poetry.dependencies]
python = "^3.8"
keyboard = "^0.13.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
expects = "^0.9.0"

[tool.poetry.scripts]
zearch = 'bin.zearch:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

